# zarnexai-annauni

./: .gitattributes  .gitignore  bot.py  intent-detection.py  pcc-deploy.toml  pyproject.toml  readme.md  selenium.py  server.py  server_utils.py
rag/: ingest.py  rag_processor.py  retriever.py
static/: index.html
tools/: gmail.py
vector_db/: chroma.sqlite3
