[project]
name = "twilio-chatbot-dial-out"
version = "0.1.0"
description = "Twilio dial-out example for Pipecat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "groq>=1.0.0",
  "pandas>=2.3.3",
  "pipecat-ai[websocket,sarvam,ollama,silero,runner,local-smart-turn-v3]>=0.0.102",
  "pipecatcloud>=0.2.20",
  "scikit-learn>=1.7.2",
  "twilio",
]
